--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       rel="stylesheet"
     />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <link
       rel="shortcut icon"
       href="images/business-card.png"
       type="image/x-icon"
@@ -30,8 +34,20 @@
         <h3>Harish Govindasamy</h3>
         <p>Frontend Developer</p>
         <h4>Tamil Nadu, India</h4>
-
-        <a href="mailto:itsharishg@gmail.com">Click here to send me an email</a>
+        <a class="" href="mailto:itsharishg@gmail.com">Click here to send me an email</a>
+        <p>
+          <a href="https://www.linkedin.com/in/itsharishg" target="_blank"
+            ><i class="fab fa-linkedin"></i> itsharishg</a
+          >
+          |
+          <a href="https://instagram.com/harishcodes" target="_blank"
+            ><i class="fab fa-instagram"></i> harishcodes</a
+          >
+          |
+          <a href="https://github.com/harish-govindasamy" target="_blank"
+            ><i class="fab fa-github"></i> harish-govindasamy</a
+          >
+        </p>
       </div>
     </div>
   </body>
