--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     />
     <link
       rel="shortcut icon"
@@ -34,16 +34,23 @@
         <h3>Harish Govindasamy</h3>
         <p>Frontend Developer</p>
         <h4>Tamil Nadu, India</h4>
-        <a class="" href="mailto:itsharishg@gmail.com">Click here to send me an email</a>
+        <a class="" href="mailto:itsharishg@gmail.com"
+          >Click here to send me an email</a
+        >
         <p>
           <a href="https://www.linkedin.com/in/itsharishg" target="_blank"
             ><i class="fab fa-linkedin"></i> itsharishg</a
           >
           |
+          <a href="https://x.com/harish_g24"
+            ><i class="fab fa-x-twitter"></i> harish_g24</a
+          >
+          |
           <a href="https://instagram.com/harishcodes" target="_blank"
             ><i class="fab fa-instagram"></i> harishcodes</a
           >
-          |
+
+          <br />
           <a href="https://github.com/harish-govindasamy" target="_blank"
             ><i class="fab fa-github"></i> harish-govindasamy</a
           >
