--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
         <h3>Harish Govindasamy</h3>
         <p>Frontend Developer</p>
         <h4>Tamil Nadu, India</h4>
-        <a class="" href="mailto:itsharishg@gmail.com"
-          >Click here to send me an email</a
-        >
-        <p>
+        <a href="mailto:itsharishg@gmail.com">Click here to send me an email</a>
+        <hr />
+        <div class="social-links">
           <a href="https://www.linkedin.com/in/itsharishg" target="_blank"
             ><i class="fab fa-linkedin"></i> itsharishg</a
           >
@@ -49,12 +48,12 @@
           <a href="https://instagram.com/harishcodes" target="_blank"
             ><i class="fab fa-instagram"></i> harishcodes</a
           >
-
-          <br />
-          <a href="https://github.com/harish-govindasamy" target="_blank"
+          <a
+            href="https://github.com/harish-govindasamy?tab=repositories"
+            target="_blank"
             ><i class="fab fa-github"></i> harish-govindasamy</a
           >
-        </p>
+        </div>
       </div>
     </div>
   </body>
