--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             ><i class="fab fa-linkedin"></i> itsharishg</a
           >
           |
-          <a href="https://x.com/harish_g24"
+          <a href="https://x.com/harish_g24" target="_blank"
             ><i class="fab fa-x-twitter"></i> harish_g24</a
           >
           |
